--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -30,12 +30,12 @@
 
 @section styles
 {
-    <link rel="stylesheet" href="/lib/cropperjs/cropper.css" />
+    <link rel="stylesheet" href="/lib/cropperjs/cropper.min.css" />
 }
 
 @section scripts
 {
-    <script src="/lib/cropperjs/cropper.js"></script>
+    <script src="/lib/cropperjs/cropper.min.js"></script>
     <script src="/js/odk.imaging.js"></script>
 
     @await Html.PartialAsync("Components/_GoogleLocationScripts")
