--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -37,11 +37,11 @@
 
 @section styles
 {
-    <link rel="stylesheet" href="/lib/cropperjs/cropper.css" />
+    <link rel="stylesheet" href="/lib/cropperjs/cropper.min.css" />
 }
 
 @section scripts
 {
-    <script src="/lib/cropperjs/cropper.js"></script>
+    <script src="/lib/cropperjs/cropper.min.js"></script>
     <script src="/js/odk.imaging.js"></script>
 }
