--- a/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
@@ -5,7 +5,7 @@
     <div class="bg-dark text-center">
         <div class="container position-relative">
             <a href="@Model.ImageLink">
-                <img src="@Model.ImageUrl">            
+                <img src="@Model.ImageUrl" alt="@Model.ImageAltText" />
             </a>
         </div>
     </div>
