--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -42,8 +42,10 @@
     <div class="position-relative
                 @(Model.Fluid ? "container-fluid" : "container")">
         <div class="d-flex align-items-center">
-            <button class="navbar-toggler @(Model.MenuItems.Length == 0 ? "invisible" : "")" 
-                type="button" data-bs-toggle="collapse" data-bs-target="#@id">
+            <button 
+                class="navbar-toggler @(Model.MenuItems.Length == 0 ? "invisible" : "")" 
+                type="button" data-bs-toggle="collapse" data-bs-target="#@id"
+                aria-controls="@id" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
                 
