--- a/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
-@using ODK.Web.Razor.Razor
+@using ODK.Web.Common.Extensions
 @model LocationFormViewModel
 @{
     var latLong = Model.Lat != null && Model.Long != null
