--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -1,5 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Chapters
-@using ODK.Web.Razor.Razor
+﻿@using ODK.Web.Common.Extensions
+@using ODK.Web.Razor.Models.Chapters
 @model CreateChapterFormViewModel
 
 <div class="form-group mb-3 required">
