--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -10,6 +10,7 @@
 @import "_utils";
 
 @import "_accordion";
+@import "_alerts";
 @import "_breadcrumb";
 @import "_buttons";
 @import "_cards";
@@ -24,13 +25,13 @@
 @import "_modal";
 @import "_navbar";
 @import "_overlay";
+@import "_paragraphs";
 @import "_sections";
 @import "_sidebar";
 @import "_social-media";
 @import "_tabs";
 @import "_tables";
 
-@import "_account";
 @import "_events";
 @import "_home";
 @import "_media";
