--- a/ODK.Web.Razor/Pages/Groups/Admin/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Admin/Create.cshtml
@@ -43,7 +43,7 @@
             <form method="post">
                 @Html.AntiForgeryToken()
 
-                @await Html.PartialAsync("Groups/_ChapterCreateForm", new CreateChapterFormViewModel
+                @await Html.PartialAsync("Groups/_GroupCreateForm", new CreateChapterFormViewModel
                 {
                     Location = new LocationFormViewModel
                     {
