--- a/ODK.Web.Razor/Pages/Groups/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Index.cshtml
@@ -87,7 +87,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group d-flex justify-content-end">
                             <button class="btn btn-outline-secondary btn-sm">Update</button>
                         </div>
                     </form>
