--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
@@ -1,4 +1,4 @@
-﻿@using ODK.Web.Razor.Razor
+﻿@using ODK.Web.Common.Extensions
 @model ODK.Web.Razor.Models.Admin.Members.AdminMemberFormViewModel
 
 <div class="form-group mb-3">
