--- a/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
@@ -6,15 +6,20 @@
 @model ODK.Web.Razor.Models.Components.BodyWithSidebarViewModel
 
 <main>
-    @if (!string.IsNullOrEmpty(Model.Title))
+    @await Html.PartialAsync("Components/_PageTitle", new PageTitleViewModel
     {
-        @await Html.PartialAsync("Components/_PageTitle", Model.Title)
-    }
+        Content = Model.TitleContent,
+        Title = Model.Title
+    })
 
-    @if (!Model.HideSubscriptionAlert)
-    {
-        @await Html.PartialAsync("Members/_SubscriptionAlert")
-    }    
+    <div class="container page-alerts">
+        @if (!Model.HideSubscriptionAlert)
+        {
+            @await Html.PartialAsync("Members/_SubscriptionAlert")
+        }
+
+        @await Html.PartialAsync("Site/_SiteAlerts")
+    </div>
 
     <section class="section--main">
         <div class="container">
