--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramForm.cshtml
@@ -1,5 +1,4 @@
-﻿@using ODK.Web.Razor.Razor
-@model ODK.Web.Razor.Models.SuperAdmin.InstagramFormViewModel
+﻿@model ODK.Web.Razor.Models.SuperAdmin.InstagramFormViewModel
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.ScraperUserAgent, new { @class = "form-label" })
