--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
@@ -16,7 +16,7 @@
     var id = "nav-group";
 }
 
-<nav class="navbar navbar-dark navbar-expand-sm navbar--group border-bottom border-light">
+<nav class="navbar navbar-expand-sm navbar--group border-bottom border-light">
     <div class="position-relative container">
         <div class="d-flex">
             <button class="navbar-toggler"
