--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -48,12 +48,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">        
     
-    <script src="~/js/odk.global.js"></script>
-    <script src="~/js/odk.themes.js"></script>
-
-    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/aspnet-client-validation/dist/aspnet-validation.css" />
-    <link rel="stylesheet" href="~/lib/slim-select/slimselect.min.css" />
+    <script src="~/js/odk.bundle.head.js"></script> 
+    <link rel="stylesheet" href="~/css/odk.bundle.lib.css" />
 
     @await RenderSectionAsync("preStyles", required: false)
     
@@ -79,15 +75,8 @@
     
     @await Html.PartialAsync("Feedback/_Notifications")
 
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/vanillajs-datepicker/dist/js/datepicker-full.min.js"></script>
-    <script src="~/lib/aspnet-client-validation/dist/aspnet-validation.min.js"></script>
-    <script src="~/lib/slim-select/slimselect.min.js"></script>
-    <script src="~/js/site.js"></script>
-    <script src="~/js/odk.maps.js"></script>
-    <script src="~/js/odk.forms.js"></script>
-    <script src="~/js/odk.lists.js"></script>
-    <script src="~/js/odk.selects.js"></script>
+    <script src="~/lib/tinymce/tinymce.min.js"></script>
+    <script src="~/js/odk.bundle.js"></script>
     @await RenderSectionAsync("scripts", required: false)
 </body>
 </html>
