--- a/ODK.Web.Razor/Views/Shared/Components/_EditableHtml.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_EditableHtml.cshtml
@@ -14,14 +14,14 @@
 
     @if (!Model.IsAdmin)
     {
-        @await Html.PartialAsync("Components/_Paragraphs", Model.Text)
+        @Html.Raw(Model.Text)
     }
     else
     {
         var editId = $"{Model.Id}-edit";
         
         <div id="@Model.Id">
-            @await Html.PartialAsync("Components/_Paragraphs", Model.Text)
+            @Html.Raw(Model.Text)
             <button class="btn btn-link p-0" type="button"
                     data-collapse-toggle-show="#@editId"
                     data-collapse-toggle-hide="#@Model.Id">
@@ -42,7 +42,7 @@
             <form action="@Model.Action" method="post">
                 @Html.AntiForgeryToken()
                 <div class="form-group mb-3">
-                    <textarea class="form-control" name="@Model.Name">@Model.Text</textarea>
+                    <textarea class="form-control" name="@Model.Name" data-html-editor>@Model.Text</textarea>
                 </div>
                 <button class="btn btn-primary">
                     @if (Model.IsCreate)
