--- a/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
@@ -1,11 +1,14 @@
-﻿@using ODK.Services.Members
+﻿@using ODK.Core.Images
+@using ODK.Services.Members
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Account
 @inject IMemberService MemberService
 @model PictureUploadViewModel
 @{
     var memberId = User.MemberIdOrDefault();
-    var imageSrc = memberId != null
+    var imageSrc = Model.MemberImage != null
+        ? ImageHelper.ToDataUrl(Model.MemberImage.ImageData, Model.MemberImage.MimeType)
+        : memberId != null
         ? $"{(Model.ChapterName != null ? $"/{Model.ChapterName}" : null)}/Members/{memberId}/Image"
         : null;
 
@@ -33,7 +36,7 @@
     @Html.TextBoxFor(x => x.Image, htmlAttributes)
     @Html.ValidationMessageFor(x => x.Image)
 
-    <div class="mt-3 d-none" data-img-preview-container>
+    <div class="mt-3 @(string.IsNullOrEmpty(imageSrc) ? "d-none" : null)" data-img-preview-container>
         <img src="@imageSrc" data-img-preview data-img-resize />
     </div>            
 </div>
