--- a/ODK.Web.Razor/Views/Shared/Events/_EventList2.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventList2.cshtml
@@ -4,14 +4,15 @@
 @{
     var events = Model.Events.OrderBy(x => x.Date);
 }
-@foreach (var @event in events)
-{
-    <div class="list-item">
-        @await Html.PartialAsync("Events/_ListEvent", new ListEventViewModel
+
+<div class="d-flex flex-column gap-3">
+    @foreach (var @event in events)
+    {
+        @await Html.PartialAsync("Events/_ListEvent2", new ListEventViewModel
         {
             ChapterName = Model.ChapterName,
             Event = @event,
             TimeZone = Model.TimeZone
         })
-    </div>
-}
+    }
+</div>
