--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupContentSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupContentSidebar.cshtml
@@ -22,7 +22,7 @@
 {
     <section class="section">
         <h5>Latest from Instagram</h5>
-        <div class="row g-0">
+        <div class="row">
             @foreach (var post in Model.InstagramPosts)
             {
                 <div class="col-3 col-md-3">
