--- a/ODK.Web.Razor/wwwroot/css/_social-media.scss
+++ b/ODK.Web.Razor/wwwroot/css/_social-media.scss
@@ -1,14 +1,13 @@
 .social-media-image-tile {
-  padding: 5px;
-  margin: 5px;
-  display: flex;
-  justify-content: center;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
 
-  img {
-    max-height: 150px;
-  }
+    img {
+        max-height: 150px;
+    }
 
-  &:hover {
-    opacity: 0.5;
-  }
+    &:hover {
+        opacity: 0.5;
+    }
 }
