--- a/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
@@ -17,8 +17,9 @@
 {
     @await Html.PartialAsync("Events/_EventList", new EventListViewModel
     {
-        ChapterName = Model.Chapter.Name,
+        Chapter = Model.Chapter,
         Events = Model.Events,
+        Platform = Model.Platform,
         TimeZone = Model.Chapter.TimeZone ?? TimeZoneInfo.FindSystemTimeZoneById(Chapter.DefaultTimeZoneId)
     })
 }
